--- a/index.html
+++ b/index.html
@@ -1,29 +1,132 @@
 <html>
 	<head>
         <script type="text/javascript">
-            var result;
+            //controls
+            var lbldest, lblhdg, lblbrg, lblspd, lbldist, lblete;
+
+            //members
+            var dest = "lax";
+            var destlat = 33.943218;
+            var destlon = -118.408413;
 
             function success(position) {
-                result.innerHTML = "Lat: " + position.coords.latitude + "<br/ >" + 
-                    "Long: " + position.coords.longitude + "<br/ >" + 
-                    "Speed: " + position.coords.speed + "<br/ >" +
-                    "Altitude: " + position.coords.altitude;
+                //result.innerHTML = "Lat: " + position.coords.latitude + "<br/ >" +
+                //    "Long: " + position.coords.longitude + "<br/ >" +
+                //    "Speed: " + position.coords.speed + "<br/ >" +
+                //    "Altitude: " + position.coords.altitude;
+
+                var alt = position.coords.altitude;
+                var lat = position.coords.latitude;
+                var lon = position.coords.longitude;
+                var v = Math.round(GetDeclination(alt, lat, lon))*-1;
+
+                var h = Math.round(position.coords.heading) + v;
+                lblhdg.innerHTML = ((h < 10) ? "00" : ((h < 100) ? "0" : "")) + h.toString() + "&deg;";
+                var b = Math.round(GetHeading(lat, lon, destlat, destlon, v));
+                lblbrg.innerHTML = ((b < 10) ? "00" : ((b < 100) ? "0" : "")) + b.toString() + "&deg;";
+                var s = Math.round(position.coords.speed * 1.94384449);
+                lblspd.innerHTML = s + " kt";
+                var d = Math.round(GetDistance(lat, lon, destlat, destlon))
+                lbldist.innerHTML = d + " nm";
+                var ete = new Date();
+                ete.setTime(d/s*3600000);
+                var eh = ete.getUTCHours();
+                var em = ete.getUTCMinutes();
+                var es = ete.getUTCSeconds();
+                lblete.innerText = (eh.length < 2 ? "0" : "") + eh + ":" + (em.length < 2 ? "0" : "") + em + ":" + (es.length < 2 ? "0" : "") + es;
             }
+
+
 
             function onReady() {
                 //register for gps
                 navigator.geolocation.watchPosition(success, null, {frequency: 500});
+
+                lbldest.innerText = dest.toUpperCase();
             }
 
             //register for ready
             window.addEventListener("load", function () {
-                result = document.getElementById("result"); 
+                lbldest = document.getElementById("lbldest");
+                lblhdg = document.getElementById("lblhdg");
+                lblbrg = document.getElementById("lblbrg");
+                lblspd = document.getElementById("lblspd");
+                lbldist = document.getElementById("lbldist");
+                lblete = document.getElementById("lblete");
                 window.addEventListener("deviceready", onReady);
             });
+
+            //utility
+            function WorldMagneticModel(){this.coff=["  1,  0,  -29496.6  ,    0.0     ,   11.6  ,      0.0","  1,  1,   -1586.3  ,  4944.4    ,   16.5  ,    -25.9","  2,  0,   -2396.6  ,     0.0    ,  -12.1  ,      0.0","  2,  1,    3026.1  , -2707.7    ,   -4.4  ,    -22.5","  2,  2,    1668.6  ,  -576.1    ,    1.9  ,    -11.8","  3,  0,    1340.1  ,     0.0    ,    0.4  ,      0.0","  3,  1,   -2326.2  ,  -160.2    ,   -4.1  ,      7.3","  3,  2,    1231.9  ,   251.9    ,   -2.9  ,     -3.9","  3,  3,     634.0  ,  -536.6    ,   -7.7  ,     -2.6","  4,  0,     912.6  ,     0.0    ,   -1.8  ,      0.0","  4,  1,     808.9  ,   286.4    ,    2.3  ,      1.1","  4,  2,     166.7  ,  -211.2    ,   -8.7  ,      2.7","  4,  3,    -357.1  ,   164.3    ,    4.6  ,      3.9","  4,  4,      89.4  ,  -309.1    ,   -2.1  ,     -0.8","  5,  0,    -230.9  ,     0.0    ,   -1.0  ,      0.0","  5,  1,     357.2  ,    44.6    ,    0.6  ,      0.4","  5,  2,     200.3  ,   188.9    ,   -1.8  ,      1.8","  5,  3,    -141.1  ,  -118.2    ,   -1.0  ,      1.2","  5,  4,    -163.0  ,     0.0    ,    0.9  ,      4.0","  5,  5,      -7.8  ,   100.9    ,    1.0  ,     -0.6","  6,  0,      72.8  ,     0.0    ,   -0.2  ,      0.0","  6,  1,      68.6  ,   -20.8    ,   -0.2  ,     -0.2","  6,  2,      76.0  ,    44.1    ,   -0.1  ,     -2.1","  6,  3,    -141.4  ,    61.5    ,    2.0  ,     -0.4","  6,  4,     -22.8  ,   -66.3    ,   -1.7  ,     -0.6","  6,  5,      13.2  ,     3.1    ,   -0.3  ,      0.5","  6,  6,     -77.9  ,    55.0    ,    1.7  ,      0.9","  7,  0,      80.5  ,     0.0    ,    0.1  ,      0.0","  7,  1,     -75.1  ,   -57.9    ,   -0.1  ,      0.7","  7,  2,      -4.7  ,   -21.1    ,   -0.6  ,      0.3","  7,  3,      45.3  ,     6.5    ,    1.3  ,     -0.1","  7,  4,      13.9  ,    24.9    ,    0.4  ,     -0.1","  7,  5,      10.4  ,     7.0    ,    0.3  ,     -0.8","  7,  6,       1.7  ,   -27.7    ,   -0.7  ,     -0.3","  7,  7,       4.9  ,    -3.3    ,    0.6  ,      0.3","  8,  0,      24.4  ,     0.0    ,   -0.1  ,      0.0","  8,  1,       8.1  ,    11.0    ,    0.1  ,     -0.1","  8,  2,     -14.5  ,   -20.0    ,   -0.6  ,      0.2","  8,  3,      -5.6  ,    11.9    ,    0.2  ,      0.4","  8,  4,     -19.3  ,   -17.4    ,   -0.2  ,      0.4","  8,  5,      11.5  ,    16.7    ,    0.3  ,      0.1","  8,  6,      10.9  ,     7.0    ,    0.3  ,     -0.1","  8,  7,     -14.1  ,   -10.8    ,   -0.6  ,      0.4","  8,  8,      -3.7  ,     1.7    ,    0.2  ,      0.3","  9,  0,       5.4  ,     0.0    ,    0.0  ,      0.0","  9,  1,       9.4  ,   -20.5    ,   -0.1  ,      0.0","  9,  2,       3.4  ,    11.5    ,    0.0  ,     -0.2","  9,  3,      -5.2  ,    12.8    ,    0.3  ,      0.0","  9,  4,       3.1  ,    -7.2    ,   -0.4  ,     -0.1","  9,  5,     -12.4  ,    -7.4    ,   -0.3  ,      0.1","  9,  6,      -0.7  ,     8.0    ,    0.1  ,      0.0","  9,  7,       8.4  ,     2.1    ,   -0.1  ,     -0.2","  9,  8,      -8.5  ,    -6.1    ,   -0.4  ,      0.3","  9,  9,     -10.1  ,     7.0    ,   -0.2  ,      0.2"," 10,  0,      -2.0  ,     0.0    ,    0.0  ,      0.0"," 10,  1,      -6.3  ,     2.8    ,    0.0  ,      0.1"," 10,  2,       0.9  ,    -0.1    ,   -0.1  ,     -0.1"," 10,  3,      -1.1  ,     4.7    ,    0.2  ,      0.0"," 10,  4,      -0.2  ,     4.4    ,    0.0  ,     -0.1"," 10,  5,       2.5  ,    -7.2    ,   -0.1  ,     -0.1"," 10,  6,      -0.3  ,    -1.0    ,   -0.2  ,      0.0"," 10,  7,       2.2  ,    -3.9    ,    0.0  ,     -0.1"," 10,  8,       3.1  ,    -2.0    ,   -0.1  ,     -0.2"," 10,  9,      -1.0  ,    -2.0    ,   -0.2  ,      0.0"," 10, 10,      -2.8  ,    -8.3    ,   -0.2  ,     -0.1"," 11,  0,       3.0  ,     0.0    ,    0.0  ,      0.0"," 11,  1,      -1.5  ,     0.2    ,    0.0  ,      0.0"," 11,  2,      -2.1  ,     1.7    ,    0.0  ,      0.1"," 11,  3,       1.7  ,    -0.6    ,    0.1  ,      0.0"," 11,  4,      -0.5  ,    -1.8    ,    0.0  ,      0.1"," 11,  5,       0.5  ,     0.9    ,    0.0  ,      0.0"," 11,  6,      -0.8  ,    -0.4    ,    0.0  ,      0.1"," 11,  7,       0.4  ,    -2.5    ,    0.0  ,      0.0"," 11,  8,       1.8  ,    -1.3    ,    0.0  ,     -0.1"," 11,  9,       0.1  ,    -2.1    ,    0.0  ,     -0.1"," 11, 10,       0.7  ,    -1.9    ,   -0.1  ,      0.0"," 11, 11,       3.8  ,    -1.8    ,    0.0  ,     -0.1"," 12,  0,      -2.2  ,     0.0    ,    0.0  ,      0.0"," 12,  1,      -0.2  ,    -0.9    ,    0.0  ,      0.0"," 12,  2,       0.3  ,     0.3    ,    0.1  ,      0.0"," 12,  3,       1.0  ,     2.1    ,    0.1  ,      0.0"," 12,  4,      -0.6  ,    -2.5    ,   -0.1  ,      0.0"," 12,  5,       0.9  ,     0.5    ,    0.0  ,      0.0"," 12,  6,      -0.1  ,     0.6    ,    0.0  ,      0.1"," 12,  7,       0.5  ,     0.0    ,    0.0  ,      0.0"," 12,  8,      -0.4  ,     0.1    ,    0.0  ,      0.0"," 12,  9,      -0.4  ,     0.3    ,    0.0  ,      0.0"," 12, 10,       0.2  ,    -0.9    ,    0.0  ,      0.0"," 12, 11,      -0.8  ,    -0.2    ,   -0.1  ,      0.0"," 12, 12,       0.0  ,     0.9    ,    0.1  ,      0.0"];this.c=new Array(13);this.cd=new Array(13);this.tc=new Array(13);this.dp=new Array(13);this.k=new Array(13);for(var a=0;a<13;a++){this.c[a]=new Array(13);this.cd[a]=new Array(13);this.tc[a]=new Array(13);this.dp[a]=new Array(13);this.k[a]=new Array(13)}this.snorm=new Array(169);this.sp=new Array(13);this.cp=new Array(13);this.fn=new Array(13);this.fm=new Array(13);this.pp=new Array(13);var b=12;var c;var a,d,e,f,g,h;var i,j,k,l,m,n,o,p,q;var r,s,t,u,v;var w;var x;c=b;this.sp[0]=0;this.cp[0]=this.snorm[0]=this.pp[0]=1;this.dp[0][0]=0;i=6378.137;j=6356.7523142;q=6371.2;k=i*i;l=j*j;m=k-l;n=k*k;o=l*l;p=n-o;this.c[0][0]=0;this.cd[0][0]=0;for(a=0;a<this.coff.length;a++){w=this.coff[a];x=w.split(",");g=parseInt(x[0],10);h=parseInt(x[1],10);r=parseFloat(x[2]);s=parseFloat(x[3]);t=parseFloat(x[4]);u=parseFloat(x[5]);if(h<=g){this.c[h][g]=r;this.cd[h][g]=t;if(h!=0){this.c[g][h-1]=s;this.cd[g][h-1]=u}}}this.snorm[0]=1;for(g=1;g<=c;g++){this.snorm[g]=this.snorm[g-1]*(2*g-1)/g;d=2;for(h=0,e=1,f=(g-h+e)/e;f>0;f--,h+=e){this.k[h][g]=((g-1)*(g-1)-h*h)/((2*g-1)*(2*g-3));if(h>0){v=(g-h+1)*d/(g+h);this.snorm[g+h*13]=this.snorm[g+(h-1)*13]*Math.sqrt(v);d=1;this.c[g][h-1]=this.snorm[g+h*13]*this.c[g][h-1];this.cd[g][h-1]=this.snorm[g+h*13]*this.cd[g][h-1]}this.c[h][g]=this.snorm[g+h*13]*this.c[h][g];this.cd[h][g]=this.snorm[g+h*13]*this.cd[h][g]}this.fn[g]=g+1;this.fm[g]=g}this.k[1][1]=0;this.fm[0]=0}WorldMagneticModel.prototype.declination=function(a,b,c,d){var e=6378.137;var f=6356.7523142;var g=6371.2;var h=e*e;var i=f*f;var j=h-i;var k=h*h;var l=i*i;var m=k-l;var n,o;var p,q,s,t;var u,v;var w,x,y,z,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z,$,_,ba,bb;var bc=12;var bd=a;var be=c;var bf=b;x=d-2010;if(x<0||x>5)return-999;w=3.14159265359;Y=w/180;y=be*Y;z=bf*Y;A=Math.sin(y);B=Math.sin(z);C=Math.cos(y);D=Math.cos(z);E=B*B;F=D*D;this.sp[1]=A;this.cp[1]=C;G=Math.sqrt(h-j*E);H=bd*G;I=(H+h)/(H+i)*((H+h)/(H+i));J=B/Math.sqrt(I*F+E);_=Math.sqrt(1-J*J);O=bd*bd+2*H+(k-m*E)/(G*G);r=Math.sqrt(O);K=Math.sqrt(h*F+i*E);ba=(bd+K)/r;bb=j*D*B/(r*K);for(v=2;v<=bc;v++){this.sp[v]=this.sp[1]*this.cp[v-1]+this.cp[1]*this.sp[v-1];this.cp[v]=this.cp[1]*this.cp[v-1]-this.sp[1]*this.sp[v-1]}L=g/r;M=L*L;N=$=Z=P=0;for(u=1;u<=bc;u++){M=M*L;for(v=0,n=1,o=(u+v+n)/n;o>0;o--,v+=n){if(u==v){this.snorm[u+v*13]=_*this.snorm[u-1+(v-1)*13];this.dp[v][u]=_*this.dp[v-1][u-1]+J*this.snorm[u-1+(v-1)*13]}else if(u==1&&v==0){this.snorm[u+v*13]=J*this.snorm[u-1+v*13];this.dp[v][u]=J*this.dp[v][u-1]-_*this.snorm[u-1+v*13]}else if(u>1&&u!=v){if(v>u-2)this.snorm[u-2+v*13]=0;if(v>u-2)this.dp[v][u-2]=0;this.snorm[u+v*13]=J*this.snorm[u-1+v*13]-this.k[v][u]*this.snorm[u-2+v*13];this.dp[v][u]=J*this.dp[v][u-1]-_*this.snorm[u-1+v*13]-this.k[v][u]*this.dp[v][u-2]}this.tc[v][u]=this.c[v][u]+x*this.cd[v][u];if(v!=0)this.tc[u][v-1]=this.c[u][v-1]+x*this.cd[u][v-1];Q=M*this.snorm[u+v*13];if(v==0){R=this.tc[v][u]*this.cp[v];T=this.tc[v][u]*this.sp[v]}else{R=this.tc[v][u]*this.cp[v]+this.tc[u][v-1]*this.sp[v];T=this.tc[v][u]*this.sp[v]-this.tc[u][v-1]*this.cp[v]}$=$-M*R*this.dp[v][u];Z+=this.fm[v]*T*Q;N+=this.fn[u]*R*Q;if(_==0&&v==1){if(u==1)this.pp[u]=this.pp[u-1];else this.pp[u]=this.ct*this.pp[u-1]-this.k[v][u]*this.pp[u-2];S=M*this.pp[u];P+=this.fm[v]*T*S}}}if(_==0)Z=P;else Z/=_;U=-$*ba-N*bb;V=Z;W=$*bb-N*ba;X=Math.sqrt(U*U+V*V);q=Math.sqrt(X*X+W*W);t=Math.atan2(V,U)/Y;p=Math.atan2(W,X)/Y;s=-999;if(Math.abs(bf)>=55){if(bf>0&&be>=0)s=t-be;if(bf>0&&be<0)s=t+Math.abs(be);if(bf<0&&be>=0)s=t+be;if(bf<0&&be<0)s=t-Math.abs(be);if(s>+180)s-=360;if(s<-180)s+=360}return t};WorldMagneticModel.prototype.knownAnswerTest=function(){var a=["80.00\t,0.00\t ,-6.13\t    ","0.00\t,120.00\t ,0.97\t    ","-80.00\t,240.00\t ,70.21\t    "];var b=["80.00\t,0.00\t ,-5.21\t    ","0.00\t,120.00\t ,0.88\t    ","-80.00\t,240.00\t ,70.04\t    "];var c=0;for(var d=0;d<a.length;d++){var e=a[d];var f=e.split(",");var g=parseFloat(f[0]);var h=parseFloat(f[1]);var i=parseFloat(f[2]);var j;var k=this.declination(0,g,h,2010);if(Math.abs(k-i)>c){c=Math.abs(k-i);j=i}}for(var d=0;d<b.length;d++){var e=b[d];var f=e.split(",");var g=parseFloat(f[0]);var h=parseFloat(f[1]);var i=parseFloat(f[2]);var j;var k=this.declination(0,g,h,2012.5);if(Math.abs(k-i)>c){c=Math.abs(k-i);j=i}}return c*100/j}
+            function GetDeclination(alt, lat, lon){ return new WorldMagneticModel().declination((alt / 1000), lat, lon, new Date().getFullYear());}
+            function GetHeading(lat1, lon1, lat2, lon2, v)
+            {
+                var dLon = rads(lon2-lon1);
+                var llat1 = rads(lat1);
+                var llat2 = rads(lat2);
+                var y = Math.sin(dLon) * Math.cos(llat2);
+                var x = Math.cos(llat1) * Math.sin(llat2) - Math.sin(llat1) * Math.cos(llat2) * Math.cos(dLon)
+                return (deg(Math.atan2(y,x)) + 360) % 360;
+            }
+            function GetDistance(lat1, lon1, lat2, lon2)
+            {
+                var R = 3960; //radius of the earth in nm
+                var dLat = rads(lat2 - lat1);
+                var dLon = rads(lon2 - lon1);
+                var a = Math.sin(dLat / 2) * Math.sin(dLat / 2) + Math.cos(rads(lat1)) *
+                        Math.cos(rads(lat2)) * Math.sin(dLon / 2) * Math.sin(dLon / 2);
+                var c = 2 * Math.asin(Math.sqrt(a));
+                var d = R * c;
+                return d * 0.868976242 ;
+            }
+
+            function deg(num){ return num*180/Math.PI; }
+            function rads(num){ return num*Math.PI/180; }
+
+
         </script>
+        <style type="text/css">
+            div {
+                font-family: Arial, Helvetica;
+                font-size: 16pt;
+                color: black;
+                text-align: center;
+                vertical-align: middle;
+            }
+            .title {font-size: 10pt;}
+            div.borders{
+                border: 3px solid black;
+            }
+        </style>
 	</head>
     <body>
-        <div id="result"></div>
+        <div id="main">
+            <div id="destinfo" class="title borders" style="{width: 100%; height: 15%;}">
+                DEST: <div class="title" id="lbldest">----</div>
+            </div>
+            <div id="navscreen" style="{width: 100%; height: 85%;}">
+                <div id="navhdgtile" class="borders" style="{width: 100%; height: 20%;}">
+                    <span class="title">HEADING</span><br/>
+                    <div id="lblhdg">---&deg;</div>
+                </div>
+                <div id="navbrgtile" class="borders" style="{width: 100%; height: 20%;}">
+                    <span class="title">BEARING</span><br/>
+                    <div id="lblbrg">---&deg;</div>
+                </div>
+                <div id="navspdtile" class="borders" style="{width: 100%; height: 20%;}">
+                    <span class="title">GROUND SPEED</span><br/>
+                    <div id="lblspd">0 kt</div>
+                </div>
+                <div id="navdisttile" class="borders" style="{width: 100%; height: 20%;}">
+                    <span class="title">DISTANCE NEXT</span><br/>
+                    <div id="lbldist">0 nm</div>
+                </div>
+                <div id="navetetile" class="borders" style="{width: 100%; height: 20%;}">
+                    <span class="title">ETE NEXT</span><br/>
+                    <div id="lblete">00:00:00</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
