refactored some methods out of main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <script src="Data/airportdata.js"></script>
     <script src="Data/latloncode.js"></script>
     <script src="Helpers/degreeslongitudepermile.js"></script>
+    <script src="Helpers/maths.js"></script>
     <script src="Helpers/getnearest.js"></script>
+    <script src="Helpers/getdistance.js"></script>
+    <script src="Helpers/getheading.js"></script>
     <script src="Helpers/simulatetravel.js"></script>
     <script src="main.js"></script>
     
