refactored some methods out of main.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="Helpers/maths.js"></script>
     <script src="Helpers/getnearest.js"></script>
     <script src="Helpers/getdistance.js"></script>
+    <script src="Helpers/getdeclination.js"></script>
     <script src="Helpers/getheading.js"></script>
     <script src="Helpers/simulatetravel.js"></script>
     <script src="main.js"></script>
