Refactored the global variables into a limited scope.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
     <script src="Entities/airport.js"></script>
     <script src="Entities/point.js"></script>
+    <script src="Entities/top.js"></script>
     <script src="Data/airportdata.js"></script>
     <script src="Data/latloncode.js"></script>
     <script src="Helpers/degreeslongitudepermile.js"></script>
