added vsi property (nav.vs) in ft/min and added to v1 UI

--- a/index.html
+++ b/index.html
@@ -40,22 +40,20 @@
                                 <div id="lblbrg">---&deg;</div>
                             </div>
                         </td>
-                    </tr>
-                    <tr>
                         <td class="navtile">
                             <div id="navspdtile" class="borders navtile">
                                 <span class="title">GROUND SPEED</span><br/>
                                 <div id="lblspd">0 kt</div>
                             </div>
                         </td>
+                    </tr>
+                    <tr>
                         <td class="navtile">
                             <div id="navdisttile" class="borders navtile">
                                 <span class="title">DISTANCE NEXT</span><br/>
                                 <div id="lbldist">0 nm</div>
                             </div>
                         </td>
-                    </tr>
-                    <tr>
                         <td class="navtile">
                             <div id="navetetile" class="borders navtile">
                                 <span class="title">ETE NEXT</span><br/>
@@ -82,9 +80,15 @@
                                 <div id="lblacc">1 g</div>
                             </div>
                         </td>
+                        <td class="navtile">
+                            <div id="navvsitile" class="borders navtile">
+                                <span class="title">VERTICAL SPEED</span><br/>
+                                <div id="lblvsi">0 ft/min</div>
+                            </div>
+                        </td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="navtile">
+                        <td colspan="3" class="navtile">
                             <div id="navsimtile" class="borders navtile">
                                 <span class="title">SIM CONTROL</span><br/>
                                 HDG:<input type="text" id="txthdg" value="320"/>
