Checking in my first attempt to build a playbook app with ant - broken

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
     <script src="Entities/airport.js"></script>
     <script src="Entities/point.js"></script>
     <script src="Entities/top.js"></script>
