added local and utc time

--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
                         </td>
                     </tr>
                     <tr>
+                        <td class="navtile">
+                            <div id="navlcltimetile" class="borders navtile">
+                                <span class="title">LCL TIME</span><br/>
+                                <div id="lbllcltime"></div>
+                            </div>
+                        </td>
+                        <td class="navtile">
+                            <div id="navutctimetile" class="borders navtile">
+                                <span class="title">UTC TIME</span><br/>
+                                <div id="lblutctime"></div>
+                            </div>
+                        </td>
+                        <td class="navtile">
+                            &nbsp;
+                        </td>
+                    </tr>
+                    <tr>
                         <td colspan="3" class="navtile">
                             <div id="navsimtile" class="borders navtile">
                                 <span class="title">SIM CONTROL</span><br/>
